feat: add product resource rest api
